    - Moved Desert, Swamp, and Temperate farm 2 unlocks into their respective Farming 2 technologies
    - Removed technology "Advanced farm upgrades 2", and moved Desert, Swamp and Temperate farm 3 unlocks into "Advanced farm upgrades"
    - Minimum version of Angel's Bioprocessing has been incremented to version 0.7.23
  Locale:
    - Added partial localization for Korean
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 2022-04-03
  Locale:
    - Updated localization for Ukrainian
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 2022-03-30
  Locale:
    - Updated localization for Ukrainian
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 2022-03-19
  Locale:
    - Added partial localization for Ukrainian
    - Updated localization for French
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 2022-01-04
  Bugfixes:
    - Fixed that several technology icons were not sized correctly when playing with the latest versions of Angel's mods
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 2021-12-19
  Changes:
    - Minimum versions of Angel's Bioprocessing and Angel's Smelting have been incremented to the latest versions
  Bugfixes:
    - Fixed startup errors related to changed icon definitions for several buildings to account for graphics changes in Angel's Refinings 0.12.1
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 2021-10-16
  Bugfixes:
    - Fixed that tint assignment for Angel's Refining structures did not validate the existence of the field being called leading to a startup error when Artisanal Reskins: Angel's mods is enabled
  Locale: