@@ -34,7 +34,7 @@ local previous_building = {
     "bio-arboretum-3",
     "gas-refinery-4",
     "advanced-chemical-plant-3",
-    "angels-air-filter-3",
+    -- "angels-air-filter-3",
     "angels-air-filter-4",
     "hydro-plant-4",
     "salination-plant-3",
@@ -44,8 +44,8 @@ local previous_building = {
     "ore-floatation-cell-4",
     "ore-leaching-plant-4",
     "ore-refinery-3",
-    "crystallizer-3",
-    "filtration-unit-3",
+    -- "crystallizer-3",
+    -- "filtration-unit-3",
     "bio-press-2",
     "bio-press-3",
     "bio-processor-2",
