@@ -5,7 +5,7 @@
     "title": "Extended Angels",
     "author": "AdamCirillo",
     "dependencies":[
-        "angelssmelting >= 0.6.18",
+        "angelssmelting >= 0.6.20",
         "bobplates",
         "flib",
         "? angelsaddons-storage",
