@@ -1,6 +1,6 @@
 [entity-name]
 advanced-chemical-plant-3=Fortgeschrittene Chemiefabrik 3
-angels-air-filter-3=Luftfilter 3
+# angels-air-filter-3=Luftfilter 3
 angels-air-filter-4=Luftfilter 4
 
 [item-name]
