@@ -1,6 +1,6 @@
 [entity-name]
 advanced-chemical-plant-3=Advanced chemical plant 3
-angels-air-filter-3=Air filter 3
+# angels-air-filter-3=Air filter 3
 angels-air-filter-4=Air filter 4
 
 [item-name]
