@@ -1,6 +1,6 @@
 [entity-name]
 advanced-chemical-plant-3=Улучшенный химический завод 3
-angels-air-filter-3=Очиститель воздуха 3
+# angels-air-filter-3=Очиститель воздуха 3
 angels-air-filter-4=Очиститель воздуха 4
 
 [item-name]
