@@ -1,6 +1,6 @@
 [entity-name]
 advanced-chemical-plant-3=Передовий хімічний завод 3
-angels-air-filter-3=Повітряний фільтр 3
+# angels-air-filter-3=Повітряний фільтр 3
 angels-air-filter-4=Повітряний фільтр 4
 
 [item-name]
