@@ -24,7 +24,7 @@ end
 
 if angelsmods.petrochem then
 	data.raw["assembling-machine"]["advanced-chemical-plant-2"].next_upgrade = "advanced-chemical-plant-3"
-	data.raw["assembling-machine"]["angels-air-filter-2"].next_upgrade = "angels-air-filter-3"
+	data.raw["assembling-machine"]["angels-air-filter-3"].next_upgrade = "angels-air-filter-4"
 	data.raw["assembling-machine"]["gas-refinery-3"].next_upgrade = "gas-refinery-4"
 end
 
@@ -36,8 +36,8 @@ if angelsmods.refining then
 	data.raw["assembling-machine"]["ore-floatation-cell-3"].next_upgrade = "ore-floatation-cell-4"
 	data.raw["assembling-machine"]["ore-leaching-plant-3"].next_upgrade = "ore-leaching-plant-4"
 	data.raw["assembling-machine"]["ore-refinery-2"].next_upgrade = "ore-refinery-3"
-	data.raw["assembling-machine"]["crystallizer-2"].next_upgrade = "crystallizer-3"
-	data.raw["assembling-machine"]["filtration-unit-3"].next_upgrade = "filtration-unit-3"
+	-- data.raw["assembling-machine"]["crystallizer-2"].next_upgrade = "crystallizer-3"
+	-- data.raw["assembling-machine"]["filtration-unit-3"].next_upgrade = "filtration-unit-3"
 end
 
 if (mods["angelsaddons-storage"] and angelsmods.addons.storage.warehouses) then
