@@ -90,38 +90,38 @@ data:extend({
         order = "c-a"
     },
 
-    -- Slag processing 3
-    {
-        type = "technology",
-        name = "slag-processing-3",
-        icon = "__angelsrefining__/graphics/technology/slag-processing.png",
-        icon_size = 64,
-        prerequisites = {
-            "slag-processing-2",
-        },
-        effects = {
-            {
-                type = "unlock-recipe",
-                recipe = "filtration-unit-3"
-            },
-            {
-                type = "unlock-recipe",
-                recipe = "crystallizer-3"
-            },
-        },
-        unit = {
-            count = 100,
-            ingredients = {
-                {"automation-science-pack", 1},
-                {"logistic-science-pack", 1},
-                {"chemical-science-pack", 1},
-                {"production-science-pack", 1},
-                {"utility-science-pack", 1},
-            },
-            time = 30
-        },
-        order = "a-a-a1"
-    },
+    -- -- Slag processing 3
+    -- {
+    --     type = "technology",
+    --     name = "slag-processing-3",
+    --     icon = "__angelsrefining__/graphics/technology/slag-processing.png",
+    --     icon_size = 64,
+    --     prerequisites = {
+    --         "slag-processing-2",
+    --     },
+    --     effects = {
+    --         {
+    --             type = "unlock-recipe",
+    --             recipe = "filtration-unit-3"
+    --         },
+    --         {
+    --             type = "unlock-recipe",
+    --             recipe = "crystallizer-3"
+    --         },
+    --     },
+    --     unit = {
+    --         count = 100,
+    --         ingredients = {
+    --             {"automation-science-pack", 1},
+    --             {"logistic-science-pack", 1},
+    --             {"chemical-science-pack", 1},
+    --             {"production-science-pack", 1},
+    --             {"utility-science-pack", 1},
+    --         },
+    --         time = 30
+    --     },
+    --     order = "a-a-a1"
+    -- },
 
     -- Angels tungsten carbide smelting 1
     {
